add start script

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@ SPOTIFY_UPDATE_INTERVAL=60000
 SPOTIFY_DEFAULT_NO_DATA_MESSAGE=Loading...
 LAST_FM_API_KEY=
 TZ=Europe/Rome # change to your timezone
-NTFY_URL=
+NTFY_URL=http://localhost:3000 # change to your NTFY URL
 NTFY_TOKEN=
